Task62619 - PYV backend cms navigation text -v3

--- a/Resources/SharedResource.en.resx
+++ b/Resources/SharedResource.en.resx
@@ -454,7 +454,7 @@
     <!-- UserManagement -->
 
     <data name="userManagement_index_title" xml:space="preserve">
-        <value>User Management</value>
+        <value>User management</value>
     </data>
     
     <data name="userManagement_edit_title" xml:space="preserve">
